ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: ingresses
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - eks.starci.net
      secretName: letsencrypt-production-tls
  rules:
  - host: eks.starci.net
    http:
      paths:
      - backend:
          service:
            name: rest-api-gateway-service-external
            port:
              number: 3001
        path: /api(/|$)(.*)
        pathType: ImplementationSpecific
